<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">coffeejob</string>
    <string name="app_id" translatable="false">593638047340260</string>
    <string name="myName_caption" translatable="false">My name: </string>
    <string name="myBio_caption" translatable="false"> My biography: </string>
    <string name="myBirth_caption" translatable="false"> My birth date: </string>
    <string name="myContacts_caption" translatable="false"> My contacts: </string>
    <string name="userPhoto" translatable="false">User photo</string>
    <string name="pleaseLoginWithFacebook" translatable="false">Please login with Facebook to use this application</string>
    <string name="login" translatable="false">Login</string>
    <string name="close" translatable="false">Close</string>
    <string name="gettingUser" translatable="false">Getting user info…</string>
    <string name="noData" translatable="false">No data</string>
    <string name="signOutAndClose" translatable="false">Sign out and close application</string>
    <string name="pleaseFindNetworkConnection" translatable="false">No network. Please find working Internet connection to use this application</string>
    <string name="cannotGetUserInfo" translatable="false">Cannot get user info. Must be Network problem</string>
    <string name="tryAgain" translatable="false">Try again</string>
    <string name="title_activity_edit_user" translatable="false">Edit user info</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="mySurname_caption" translatable="false">My surname:</string>
    <string name="selectDate_caption" translatable="false">Select date</string>
    <string name="addContact_caption" translatable="false">Add contact</string>
    <string name="save" translatable="false">Save</string>
    <string name="Delete" translatable="false">Delete</string>
    <string name="Cancel" translatable="false">Cancel</string>
    <string name="Edit" translatable="false">Edit</string>
    <string name="User" translatable="false">User</string>
    <string name="Friends" translatable="false">Friends</string>
    <string name="About" translatable="false">About</string>
    <string name="friendsCount" translatable="false">Friends count: </string>
    <string name="msgTooOld" translatable="false">You can not be so old!</string>
    <string name="msgTooYoung" translatable="false">I bet you was born earlier!</string>
    <string name="msgNoBio" translatable="false">What is about you biography?</string>
    <string name="msgNoSurname" translatable="false">I am curious of your surname</string>
    <string name="msgNoName" translatable="false">Please tell me your name</string>
    <string name="aboutMyself" translatable="false">About myself:</string>
    <string name="uvsBio" translatable="false">Born in 1991, live in Ukraine. That is all I know.</string>
    
    <string-array name="priority">
    <item>5</item>
    <item>4</item>
    <item>3</item>
    <item>2</item>
    <item>1</item>
</string-array>

</resources>
